# media_neo

./: README.en.md  README.md  开发笔记.md
MediaNeo/: build.gradle  settings.gradle
MediaNeo/app/: CMakeLists.txt  build.gradle
MediaNeo/app/libs/aar/: medianeocat-debug.aar  medianeocat-release.aar
MediaNeo/app/src/androidTest/java/com/hangliebe/medianeo/: ExampleInstrumentedTest.java
MediaNeo/app/src/androidTest/java/com/hangliebe/meidaneo/: ExampleInstrumentedTest.java
MediaNeo/app/src/main/: AndroidManifest.xml
MediaNeo/app/src/main/cpp/: ffmpeg_handle.cpp  native-lib.cpp
MediaNeo/app/src/main/cpp/utils/: Log.h  Log2.h
MediaNeo/app/src/main/java/com/hangliebe/medianeo/: MainActivity.java
MediaNeo/app/src/main/java/com/hangliebe/medianeo/case1/: ImageReaderDemo.java
MediaNeo/app/src/main/java/com/hangliebe/medianeo/case_opengles/: CameraRender.java  OpenGLActivity.java  ShaderUtils.java
MediaNeo/app/src/main/java/com/hangliebe/medianeo/rtmp/: FFmpegHandle.java  LiveBroadcastActivity.java  RtmpActivity.java
MediaNeo/app/src/main/java/com/hangliebe/medianeo/tool/: ImageTransformer.java
MediaNeo/app/src/main/java/com/hangliebe/meidaneo/: MainActivity.java
MediaNeo/app/src/main/java/com/hangliebe/meidaneo/case1/: ImageReaderDemo.java
MediaNeo/app/src/main/java/com/hangliebe/meidaneo/previewTest/: PreviewActivity.java
MediaNeo/app/src/main/java/com/hangliebe/meidaneo/rtmp/: RtmpActivity.java
MediaNeo/app/src/main/java/com/hangliebe/meidaneo/tool/: AlertTool.java
MediaNeo/app/src/main/res/layout/: activity_image_reader_demo.xml  activity_live_broadcast.xml  activity_main.xml  activity_open_glactivity.xml  activity_preview.xml  activity_rtmp.xml
MediaNeo/app/src/main/res/values/: strings.xml
MediaNeo/app/src/test/java/com/hangliebe/meidaneo/: ExampleUnitTest.java
MediaNeo/gradle/wrapper/: gradle-wrapper.properties
MediaNeo/medianeocat/: build.gradle
MediaNeo/medianeocat/src/androidTest/java/com/hangliebe/medianeocat/: ExampleInstrumentedTest.java
MediaNeo/medianeocat/src/main/: AndroidManifest.xml
MediaNeo/medianeocat/src/main/java/com/hangliebe/medianeocat/: CameraNeo.java  CameraNeoException.java  (+1 more)
(+1 files in other folders)
